<?xml version="1.0"?>
<package format="2">
  <name>ndt_slam</name>
  <version>0.1.0</version>
  <description>NDT SLAM algorithm</description>

  <maintainer email="csamak@clemson.edu">Chinmay Samak</maintainer>
  <maintainer email="tsamak@clemson.edu">Tanmay Samak</maintainer>
  <maintainer email="rottertarmenation.y11.r18@gmail.com">Ryu Yamamoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ndt_omp</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ndt_omp</exec_depend>

  <export>
  </export>

</package>
